# automated-sustainability-report-generation-with-carbon-footprint-estimation-using-RAG

./: .env.example  .gitignore  README.md  final_evaluation.py  generate_report.py  pyproject.toml  run_ragas_evaluation.py  run_ragas_generation_evaluation.py  test_ibb_39_districts.xlsx  test_istanbul_emissions.xlsx  testexcel.xlsx  try_formula.py
app/: main.py  session_state.py
docs/: retrieval_design.md
rag_retrieval/: __init__.py  chatbot.py  chunking.py  config.py  data_engine.py  embeddings.py  evaluation.py  fact_extractor.py  formula_extractor.py  generation.py  index.py  ingestion.py  insight_engine.py  llm_formula_extractor.py  metric_discovery.py  metric_interpreter.py  metric_registry.py  metric_semantics.py  models.py  parsing.py  pipeline.py  plotter.py  qa_generation.py  ragas_evaluation.py  ragas_generation_evaluation.py  recommendation_engine.py  reference_Data.json  renderer.py  report_builder.py  report_metrics.py  report_models.py  report_pipeline.py  retrieval.py  router.py  session.py  text.py
sample_docs/: consumption_data.csv  emission_factors.txt
tests/: test_acceptance_flow.py  test_app_api.py  test_chunking.py  test_custom_formula_flow.py  test_data_engine.py  test_evaluation.py  test_fact_extractor.py  test_formula_extractor.py  test_insight_analytics.py  test_insight_engine.py  test_metric_semantics.py  test_parsing.py  test_pipeline.py  test_ragas_evaluation.py  test_ragas_generation_evaluation.py  test_recommendation_engine.py  test_report_generation.py  test_retrieval.py  test_router.py  test_spreadsheet_parsing.py  test_ui_e2e.py
(+1 files in other folders)
